# podela-me

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  rust-analyzer.toml
common/: Cargo.toml
common/migrations/: 0001_Initial.sql  0002_Functions.sql
common/src/: args.rs  lib.rs
common/src/database/: comment.rs  mod.rs  user.rs
common/src/database/reviewable/: mod.rs  website.rs
config/: log4rs.yaml
development/: Cargo.toml
development/src/: main.rs
development/src/docker/: mod.rs
rinja_axum/: Cargo.toml
rinja_axum/locales/en-US/: main.ftl
rinja_axum/src/: filters.rs  lib.rs
website/: Cargo.toml
website/locales/en-US/: main.ftl
website/src/: main.rs
website/src/filters/: fluent.rs  mod.rs
website/src/page/: mod.rs
website/src/page/index/: mod.rs
website/src/page/partials/: mod.rs
website/src/page/subject/: mod.rs
website/src/page/user/: mod.rs
website/styles/: colors.scss  main.scss
website/styles/miscellaneous/: animations.scss
website/styles/partial/: comment.scss  modal.scss  navbar.scss  subject.scss  user_profile.scss
website/styles/partial/user/: profile.scss
website/templates/: index.html  navbar.html
website/templates/partials/: comments.html  navbar.html  user-link.html
website/templates/partials/modals/: base.html
website/templates/partials/modals/user/: profile.html
website/templates/subject/: website.html
website/templates/subject/website/: list.html
website/templates/user/: auth.html  profile.html
website/templates/user/modals/: profile.html
