[package]
name = "podela-me"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"
members = [
    "common",
    "website",
    "rinja_axum",
    "development",
]
default-members = ["development"]

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
unimplemented = "warn"
missing_docs_in_private_items = "allow"
must_use_candidate = "warn"

large_enum_variant = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
tokio = { version = "1.12", features = ["full"] }
thiserror = "2.0.9"
serde = { version = "1.0", features = ["derive"] }
axum = { git = "https://github.com/tokio-rs/axum", branch = "main" }
axum-login = { version = "0.16.0" }
clap = { version = "4.5.23", features = ["derive", "env"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
ulid = { version = "1.1.3" }
log = { version = "0.4.21" }
log4rs = { version = "=1.3.0" }
chrono = { version = "0.4.39" }
fluent-templates = { version = "0.12.0" }
unic-langid = { version = "0.9.5" }