[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
ulid = { workspace = true }
sqlx = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
log4rs = { workspace = true }
chrono = { workspace = true }
unic-langid = { workspace = true }

uuid = "1.11.0"
argon2 = "0.5.3"