[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
ulid = { workspace = true }
sqlx = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
log4rs = { workspace = true }
chrono = { workspace = true }
unic-langid = { workspace = true }
fluent-templates = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

argon2 = { version = "0.5.3", features = ["std"] }