[package]
name = "website"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
rinja_axum = { path = "../rinja_axum" }
axum = { workspace = true }
axum-login = { workspace = true }
tokio = { workspace = true }
fluent-templates = { workspace = true }
lazy_static = { workspace = true }

rinja = { git = "https://github.com/rinja-rs/rinja.git", branch = "master" }
axum-macros = "0.5.0"
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["fs"] }
tower-sessions = { version = "0.13.0", default-features = false, features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.14.2", features = ["postgres"] }