[package]
name = "website"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
poem = { workspace = true }
tokio-tungstenite = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
fluent-templates = { workspace = true }
lazy_static = { workspace = true }

rinja = { git = "https://github.com/rinja-rs/rinja.git", branch = "master" }